// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusMessage should render with exact matches 1`] = `
<EuiText
  grow={true}
  size="s"
>
  <EuiTextColor
    color="secondary"
  >
    <EuiIcon
      size="m"
      type="check"
    />
    <span>
       
      <FormattedMessage
        defaultMessage="{strongSuccess} Your index pattern matches {exactMatchedIndices}."
        id="kbn.management.indexPattern.create.step.status.success.label"
        values={
          Object {
            "exactMatchedIndices": <strong>
              <FormattedMessage
                defaultMessage="{indicesLength, plural, one {# index} other {# indices}}"
                id="kbn.management.indexPattern.create.step.status.success.exactMatchedIndices"
                values={
                  Object {
                    "indicesLength": 1,
                  }
                }
              />
            </strong>,
            "strongSuccess": <strong>
              <FormattedMessage
                defaultMessage="Success!"
                id="kbn.management.indexPattern.create.step.status.success.strongSuccess"
                values={Object {}}
              />
            </strong>,
          }
        }
      />
    </span>
  </EuiTextColor>
</EuiText>
`;

exports[`StatusMessage should render with no partial matches 1`] = `
<EuiText
  grow={true}
  size="s"
>
  <EuiTextColor
    color="default"
  >
    <span>
      <FormattedMessage
        defaultMessage="The index pattern you've entered doesn't match any indices. You can match any of your {allIndices}, below."
        id="kbn.management.indexPattern.create.step.status.notMatch.label"
        values={
          Object {
            "allIndices": <strong>
              <FormattedMessage
                defaultMessage="{indicesLength} indices"
                id="kbn.management.indexPattern.create.step.status.notMatch.allIndices"
                values={
                  Object {
                    "indicesLength": 2,
                  }
                }
              />
            </strong>,
          }
        }
      />
    </span>
  </EuiTextColor>
</EuiText>
`;

exports[`StatusMessage should render with partial matches 1`] = `
<EuiText
  grow={true}
  size="s"
>
  <EuiTextColor
    color="default"
  >
    <span>
      <FormattedMessage
        defaultMessage="Your index pattern doesn't match any indices, but you have {strongIndices} which {matchedIndicesLength, plural, one {looks} other {look}} similar."
        id="kbn.management.indexPattern.create.step.status.partialMatch.label"
        values={
          Object {
            "matchedIndicesLength": 1,
            "strongIndices": <strong>
              <FormattedMessage
                defaultMessage="{matchedIndicesLength, plural, one {# index} other {# indices}} "
                id="kbn.management.indexPattern.create.step.status.partialMatch.strongIndices"
                values={
                  Object {
                    "matchedIndicesLength": 1,
                  }
                }
              />
            </strong>,
          }
        }
      />
    </span>
  </EuiTextColor>
</EuiText>
`;

exports[`StatusMessage should render without a query 1`] = `
<EuiText
  grow={true}
  size="s"
>
  <EuiTextColor
    color="default"
  >
    <span>
      <FormattedMessage
        defaultMessage="Your index pattern can match any of your {allIndices}, below."
        id="kbn.management.indexPattern.create.step.status.match"
        values={
          Object {
            "allIndices": <strong>
              <FormattedMessage
                defaultMessage="{allIndicesLength, plural, one {# index} other {# indices}}"
                id="kbn.management.indexPattern.create.step.status.allIndices"
                values={
                  Object {
                    "allIndicesLength": 2,
                  }
                }
              />
            </strong>,
          }
        }
      />
    </span>
  </EuiTextColor>
</EuiText>
`;

exports[`StatusMessage should show that no indices exist 1`] = `
<EuiText
  grow={true}
  size="s"
>
  <EuiTextColor
    color="default"
  >
    <span>
      <FormattedMessage
        defaultMessage="No Elasticsearch indices match your pattern."
        id="kbn.management.indexPattern.create.step.status.noSystemIndices"
        values={Object {}}
      />
    </span>
  </EuiTextColor>
</EuiText>
`;

exports[`StatusMessage should show that system indices exist 1`] = `
<EuiText
  grow={true}
  size="s"
>
  <EuiTextColor
    color="default"
  >
    <span>
      <FormattedMessage
        defaultMessage="No Elasticsearch indices match your pattern. To view the matching system indices, toggle the switch in the upper right."
        id="kbn.management.indexPattern.create.step.status.noSystemIndicesWithPrompt"
        values={Object {}}
      />
    </span>
  </EuiTextColor>
</EuiText>
`;
